// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consent renders with optional prop consentInstanceId 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
  >
    <script
      type="application/json"
    >
      {"consentRequired":"remote","consentInstanceId":"my-consent","postPromptUI":"privacy-settings-prompt","clientConfig":{"isTCFV2":true,"accountId":"test-accountid","propertyHref":"test-propertyhref"}}
    </script>
    <div
      id="privacy-settings-prompt"
    >
      <button
        class="css-0"
        on="tap:consent.prompt(consent=SourcePoint)"
        type="button"
      >
        Privacy Settings
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;

exports[`Consent renders with optional prop consentRequired 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
  >
    <script
      type="application/json"
    >
      {"consentRequired":true,"consentInstanceId":"sourcepoint","postPromptUI":"privacy-settings-prompt","clientConfig":{"isTCFV2":true,"accountId":"test-accountid","propertyHref":"test-propertyhref"}}
    </script>
    <div
      id="privacy-settings-prompt"
    >
      <button
        class="css-0"
        on="tap:consent.prompt(consent=SourcePoint)"
        type="button"
      >
        Privacy Settings
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;

exports[`Consent renders with optional prop privacyManagerId 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
  >
    <script
      type="application/json"
    >
      {"consentRequired":"remote","consentInstanceId":"sourcepoint","postPromptUI":"privacy-settings-prompt","clientConfig":{"isTCFV2":true,"privacyManagerId":"test-privacymanagerid","accountId":"test-accountid","propertyHref":"test-propertyhref"}}
    </script>
    <div
      id="privacy-settings-prompt"
    >
      <button
        class="css-0"
        on="tap:consent.prompt(consent=SourcePoint)"
        type="button"
      >
        Privacy Settings
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;

exports[`Consent renders with optional prop settingsButtonText 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
  >
    <script
      type="application/json"
    >
      {"consentRequired":"remote","consentInstanceId":"sourcepoint","postPromptUI":"privacy-settings-prompt","clientConfig":{"isTCFV2":true,"privacyManagerId":"test-privacymanagerid","accountId":"test-accountid","propertyHref":"test-propertyhref"}}
    </script>
    <div
      id="privacy-settings-prompt"
    >
      <button
        class="css-0"
        on="tap:consent.prompt(consent=SourcePoint)"
        type="button"
      >
        Privacy Manager
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;

exports[`Consent renders with optional prop siteId 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
  >
    <script
      type="application/json"
    >
      {"consentRequired":"remote","consentInstanceId":"sourcepoint","postPromptUI":"privacy-settings-prompt","clientConfig":{"isTCFV2":true,"siteId":"test-siteId","accountId":"test-accountid","propertyHref":"test-propertyhref"}}
    </script>
    <div
      id="privacy-settings-prompt"
    >
      <button
        class="css-0"
        on="tap:consent.prompt(consent=SourcePoint)"
        type="button"
      >
        Privacy Settings
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;

exports[`Consent renders with optional prop targetingParams 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
  >
    <script
      type="application/json"
    >
      {"consentRequired":"remote","consentInstanceId":"sourcepoint","postPromptUI":"privacy-settings-prompt","clientConfig":{"isTCFV2":true,"targetingParams":{"foo":"bar"},"accountId":"test-accountid","propertyHref":"test-propertyhref"}}
    </script>
    <div
      id="privacy-settings-prompt"
    >
      <button
        class="css-0"
        on="tap:consent.prompt(consent=SourcePoint)"
        type="button"
      >
        Privacy Settings
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;

exports[`Consent renders with policy 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
  >
    <script
      type="application/json"
    >
      {"consentRequired":"remote","consentInstanceId":"sourcepoint","postPromptUI":"privacy-settings-prompt","policy":{"default":{"timeout":{"seconds":5,"fallbackAction":"reject"}}},"clientConfig":{"isTCFV2":true,"accountId":"test-accountid","propertyHref":"test-propertyhref"}}
    </script>
    <div
      id="privacy-settings-prompt"
    >
      <button
        class="css-0"
        on="tap:consent.prompt(consent=SourcePoint)"
        type="button"
      >
        Privacy Settings
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;

exports[`Consent renders with postPromptUI 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
  >
    <script
      type="application/json"
    >
      {"consentRequired":"remote","consentInstanceId":"sourcepoint","postPromptUI":"postPrompt","clientConfig":{"isTCFV2":true,"accountId":"test-accountid","propertyHref":"test-propertyhref"}}
    </script>
    <div
      id="postPrompt"
    >
      <button
        class="css-0"
        on="tap:consent.prompt(consent=SourcePoint)"
        type="button"
      >
        Privacy Settings
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;

exports[`Consent renders without default consent button 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
  >
    <script
      type="application/json"
    >
      {"consentRequired":"remote","consentInstanceId":"sourcepoint","postPromptUI":"privacy-settings-prompt","clientConfig":{"isTCFV2":true,"accountId":"test-accountid","propertyHref":"test-propertyhref"}}
    </script>
  </amp-consent>
</DocumentFragment>
`;

exports[`Consent renders without postPromptUI 1`] = `
<DocumentFragment>
  <amp-consent
    id="consent"
    layout="nodisplay"
  >
    <script
      type="application/json"
    >
      {"consentRequired":"remote","consentInstanceId":"sourcepoint","postPromptUI":"privacy-settings-prompt","clientConfig":{"isTCFV2":true,"accountId":"test-accountid","propertyHref":"test-propertyhref"}}
    </script>
    <div
      id="privacy-settings-prompt"
    >
      <button
        class="css-0"
        on="tap:consent.prompt(consent=SourcePoint)"
        type="button"
      >
        Privacy Settings
      </button>
    </div>
  </amp-consent>
</DocumentFragment>
`;
